--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -11,8 +11,8 @@
     height: auto;
     min-height: unset;
     padding-top: 8rem;
-    padding-bottom: 3rem;
-    margin-bottom: 2rem;
+    padding-bottom: 4rem;
+    margin-bottom: 0;
   }
 }
 
